# SRM-Benchmark

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: srm-benchmark-ci.yaml  srm-benchmark-ci.yml
BSDS500-Benchmark/: BSDS500-Benchmark-Notebook.ipynb  README.md  cpp_impl_benchmark.csv  python_impl_benchmark.csv  rename_files.sh  requirements.txt  rust_impl_benchmark.csv
C++/: Makefile  main.cpp
C++/Headers/: Region.hpp  RegionCouple.hpp  SRM.hpp  UtilityFunctions.hpp  srmtypes.hpp
C++/Implementations/: Region.cpp  RegionCouple.cpp  SRM.cpp  UtilityFunctions.cpp
libsrm_cpp/: .gitignore  CMakeLists.txt  README.md
libsrm_cpp/include/libsrm_cpp/: srm.hpp  utils.hpp
libsrm_cpp/src/: main.cpp  srm.cpp  utils.cpp
libsrm_py/: README.md  requirements.txt  srm.py
libsrm_rust/: .gitignore  Cargo.toml  README.md
libsrm_rust/src/: main.rs
libsrm_rust/src/algorithms/: mod.rs  srm.rs
py_native_srm/: README.md  srm.py
